[1.2.0] add stereotype Bean enumeration